--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,16 +1,7 @@
-customer.id.null=Customer ID not found!
-customer.version.null=Customer version not found!
-customer.user.name.null=Customer user name not found!
-customer.user.name.invalid=Customer user name is not valid!
-customer.email.null=Customer email not found!
-customer.email.invalid=Customer email is not valid!
-first.customer.name.invalid=First name is not valid!
-last.customer.name.invalid=Last name is not valid!
-full.customer.name.invalid=Full name is not valid!
-customer.age.invalid=Customer age is not valid!
-customer.birthdate.invalid=Customer birthdate is not valid!
 customer.form.title=Add New Customer
 label.username=User Name
-label.firstname=First Name
-label.lastname=Last Name
 label.email=Email
+label.signup.title= Sign up
+label.username.placeholder= enter user name
+label.email.placeholder=enter email
+label.signup.button=Submit
